# doc4for

./: .flake8  .gitignore  LICENSE  README.md  doc4for.json  generate_file_tree.py  generate_module_tree.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
docs/static/css/: styles.css
src/: directory_utils.py  generate_docs.py
src/doc4for/: __init__.py  argument_utils.py  arguments.py  comment_utils.py  data_models.py  file_utils.py  generate_docs.py  html_comment_utils.py  logging_config.py  procedure_utils.py  type_utils.py
src/doc4for/config/: __init__.py  configuration.py
src/doc4for/f90/: generate_file_tree.py  generate_inheritance_tree.py  generate_module_diagram.py  generate_module_tree.py  generate_type_tree.py  generate_uses_tree.py  populate_data_models.py
src/doc4for/models/: common.py  dimension_models.py  file_models.py  module_models.py  procedure_models.py  type_models.py  variable_models.py
src/doc4for/parse/: __init__.py  argument_parser.py  array_utils.py  base_parser.py  common_parser.py  dimension_parser.py  enum_parser.py  file_parser.py  function_parser.py  interface_helper.py  interface_parser.py  module_parser.py  parameter_parser.py  parsing_utils.py  procedure_argument_parser.py  procedure_parser.py  program_parser.py  shared_data_parser.py  subroutine_parser.py  type_parser.py  uses_parser.py  variable_parser.py
src/doc4for/process/: generate_uses_tree.py
src/doc4for/utils/: attribute_utils.py  comment_utils.py  file_utils.py  procedure_utils.py
src/f90/: generate_file_tree.py  generate_module_tree.py
templates/: file_template.html  inheritance_tree_template.html  module_template.html  styles.css  template.html
templates/core/html/: file_template.html  inheritance_tree_template.html  module_template.html
templates/static/css/: styles.css
tests/doc4for/: test_build_directory_tree.py  test_find_f90_files.py  test_find_f90_files_temp.py  test_inheritance_tree.py  test_module_diagram.py  test_submodule.py  test_transform_uses_to_html.py  test_uses_tree.py
tests/doc4for/config/: test_configuration.py  test_configuration_structure.py
tests/doc4for/f90/: dummy_code.py  test_arrays.py  test_attributes.py  test_basic_declarations.py  test_block_data_common_block_and_data.py  test_block_data_initialisations.py  test_build_directory_tree.py  test_character_variables.py  test_coarrays.py  test_comments.py  test_common_block.py  test_complex_cases.py  test_complex_types.py  test_create_docs_directory.py  test_data_initialisations.py  test_data_statements.py  test_equivalence.py  test_file_block_data.py  test_file_block_data_bindings.py  test_file_constants.py  test_file_description.py  test_file_functions.py  test_file_interfaces.py  test_file_modules.py  test_file_programs.py  test_file_subroutines.py  test_generated_file_html.py  test_generic_and_operator_interfaces.py  test_import_statements.py  test_interface_import_statements.py  test_kind_specifications.py  test_module.py  test_module_binding_optional_parameters.py  test_module_common_block_bindings.py  test_module_complex_interfaces.py  test_module_constants.py  test_module_data_component_in_type.py  test_module_derived_type_bindings.py  test_module_enumerations.py  (+34 more)
tests/f90/: test_build_directory_tree.py  test_create_docs_directory.py  test_find_f90_files.py  test_find_f90_files_temp.py  test_generated_file_html.py  test_module.py  test_module_constants.py  test_module_function_annotations.py  test_module_function_arguments.py  test_module_function_attributes.py  test_module_functions.py  test_module_output.py  test_process_comment.py
(+40 files in other folders)
