[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc4for"
version = "0.1"
description = "A tool for generating documentation for Fortran code"
readme = "README.md"
authors = [{name = "emcleod"}]
urls = {Repository = "https://github.com/emcleod/doc4for"}
requires-python = ">=3.6"
dependencies = [
    "fparser>=0.1.4",
    "jinja2>=3.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


#pip install -e . --config-settings editable_mode=compat