[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc4for"
version = "0.1.0"
description = "A tool for generating documentation for Fortran code"
readme = "README.md"
authors = [{name = "emcleod"}]
urls = {Repository = "https://github.com/emcleod/doc4for"}
requires-python = ">=3.6"
dependencies = [
    "fparser>=0.2.0",
    "jinja2>=3.1",
    "networkx>=3.0",
    "plotly>=5.13.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
doc4for = "doc4for.generate_docs:main"

